# SimProv

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  README.rst  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/dev/: api.rst  developer_guide.rst  developer_interface.rst
docs/source/user/: building_capturer.rst  concepts.rst  extensions.rst  extracting_provenance.rst  install.rst  quickstart.rst  simprovweb.rst  specifying_entities_and_activities.rst  specifying_rules.rst  using_simprov.rst  utility_library.rst  vscode_plugin.rst
docs/source/user/incl/: pattern.rst  rule.rst
simprov/: __init__.py  command_line.py  core.py  exceptions.py  export.py  provenance.py  reducer.py  rule_engine.py  specifications.py
simprov/interface/: browser_api_blueprint.py  capturer_api_blueprint.py  debug_api_blueprint.py  restapi.py  wrapper.py
tests/: conftest.py  test_activity_detection.py  test_provenance.py  test_rule_engine.py  test_specifications.py
tests/resources/: complex-event.json  error-rules.py  error-specs.yaml  error_event.json  real-rules.py  real-specs.yaml  specs.yaml
